--- a/MovieLibraryAngular/ClientApp/package.json
+++ b/MovieLibraryAngular/ClientApp/package.json
@@ -10,22 +10,29 @@
     "build": "ng build",
     "build:ssr": "ng run MovieLibraryAngular:server:dev",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.3",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^14.0.3",
     "@angular/compiler": "^14.0.3",
     "@angular/core": "^14.0.3",
     "@angular/forms": "^14.0.3",
-    "@angular/material": "^7.0.0",
+    "@angular/localize": "^14.0.3",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^14.0.3",
     "@angular/platform-browser-dynamic": "^14.0.3",
     "@angular/platform-server": "^14.0.3",
     "@angular/router": "^14.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^15.2.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
